--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
@@ -11,55 +12,19 @@
         android:orientation="vertical">
 
         <SearchView
-            android:textColor="#020202"
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:iconifiedByDefault="false"
             android:scrollbarStyle="insideOverlay"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#020202" />
 
         <LinearLayout
             android:id="@+id/filterOptionsContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal" />
-
-        <!--        <LinearLayout-->
-        <!--                    android:layout_width="wrap_content"-->
-        <!--                    android:layout_height="wrap_content"-->
-        <!--                    android:orientation="horizontal">-->
-
-        <!--                    <TextView-->
-        <!--                        android:layout_width="wrap_content"-->
-        <!--                        android:layout_height="wrap_content"-->
-        <!--                        android:text="Locale: "-->
-        <!--                        android:textAppearance="?android:attr/textAppearanceMedium" />-->
-
-        <!--            <Spinner-->
-        <!--                android:id="@+id/localeSpinner"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content" />-->
-
-        <!--            <TextView-->
-        <!--                android:id="@+id/textView2"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:text="Collection size"-->
-        <!--                android:textAppearance="?android:attr/textAppearanceMedium" />-->
-
-        <!--            <EditText-->
-        <!--                android:id="@+id/editText_collectionSize"-->
-        <!--                android:layout_width="68dp"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:ems="10"-->
-        <!--                android:inputType="number"-->
-        <!--                android:text="10"-->
-        <!--                android:textAppearance="?android:attr/textAppearanceMedium" />-->
-        <!--    //    </LinearLayout>-->
-
-
-
 
     </LinearLayout>
 
@@ -85,56 +50,100 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true" />
-        <LinearLayout
+
+        <RelativeLayout
             android:id="@+id/layout_time"
-            android:layout_margin="@dimen/_8sdp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
             android:orientation="horizontal">
 
-
-            <TextView
-                android:textColor="#000000"
-                android:id="@+id/createRoute"
+            <LinearLayout
+                android:background="#777878"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:textSize="20dp" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <!--            <TextView-->
-            <!--                android:layout_marginLeft="@dimen/_50sdp"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text="Thời Gian: "-->
-            <!--                android:textSize="20dp" />-->
-            <TextView
-                android:id="@+id/tv_time"
-                android:layout_marginLeft="@dimen/_50sdp"
+                <TextView
+                    android:id="@+id/createRoute"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:textColor="#FFFFFF"
+                    android:textSize="13dp" />
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#FFFFFF"
+                    android:layout_toLeftOf="@id/createRoute"
+                    android:textSize="13dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:background="#777878"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20dp" />
-        </LinearLayout>
-        <androidx.appcompat.widget.AppCompatButton
-            android:background="@drawable/ic_baseline_gps_fixed_24"
-            android:textColor="#020202"
-            android:id="@+id/btnGps"
-            android:layout_margin="@dimen/_30sdp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp" />
-        <androidx.appcompat.widget.AppCompatButton
-            android:background="@drawable/ic_baseline_find_in_page_24"
-            android:textColor="#020202"
-            android:id="@+id/btnFind"
-            android:layout_marginEnd="@dimen/_30sdp"
-            android:layout_marginBottom="@dimen/_65sdp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp" />
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/createRoute2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#FFFFFF"
+                    android:textSize="13dp" />
+
+                <TextView
+                    android:textColor="#FFFFFF"
+                    android:id="@+id/tv_time2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@id/createRoute2"
+                    android:textSize="13dp" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="30dp"
+            app:cardCornerRadius="10dp">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnGps"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/ic_baseline_gps_fixed_24"
+                android:textColor="#020202" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="85dp"
+            app:cardCornerRadius="10dp">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnFind"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/ic_baseline_find_in_page_24"
+                android:textColor="#020202" />
+        </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
 </LinearLayout>
