--- a/app/src/main/res/layout/result_autosuggest_list_item.xml
+++ b/app/src/main/res/layout/result_autosuggest_list_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/header"
@@ -12,40 +12,40 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
-                android:textSize="25dp"
                 android:id="@+id/highlightedTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="HightlightedTitle:"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#000000"
-                android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textSize="25dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/title"
-                android:textColor="#000000"
-                android:textSize="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Title:"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#000000"
+                android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/type"
-                android:textColor="#000000"
-                android:textSize="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Type:"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#000000"
+                android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/vicinity"
@@ -54,7 +54,7 @@
                 android:text="Vicinity:"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#000000"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/category"
@@ -74,21 +74,21 @@
                 android:textColor="#000000"
                 android:textSize="20dp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/boundaryBox"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="BoundaryBox:"-->
-<!--                android:textAppearance="?android:attr/textAppearanceSmall"-->
-<!--                android:textColor="@android:color/darker_gray" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/boundaryBox"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="BoundaryBox:"-->
+            <!--                android:textAppearance="?android:attr/textAppearanceSmall"-->
+            <!--                android:textColor="@android:color/darker_gray" />-->
 
-<!--            <TextView-->
-<!--                android:id="@+id/url"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="URL:"-->
-<!--                android:textAppearance="?android:attr/textAppearanceSmall"-->
-<!--                android:textColor="@android:color/darker_gray" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/url"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="URL:"-->
+            <!--                android:textAppearance="?android:attr/textAppearanceSmall"-->
+            <!--                android:textColor="@android:color/darker_gray" />-->
         </LinearLayout>
     </LinearLayout>
 
