--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,10 +55,10 @@
             android:id="@+id/layout_time"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/px_8"
+            android:layout_marginTop="@dimen/px_8"
+            android:layout_marginEnd="@dimen/px_8"
+            android:layout_marginBottom="@dimen/px_8"
             android:orientation="horizontal">
 
             <LinearLayout
